# locallm

./: .gitignore  Cargo.toml  README.md  example-home.nix  flake.nix  idea.md  locallm.desktop
src/: clipboard.rs  config.rs  gpu_stats.rs  main.rs  ollama.rs  ui.rs
