[package]
name = "locallm"
version = "0.1.0"
edition = "2021"
description = "A lightweight chat UI for local Ollama LLMs"
license = "MIT"
authors = ["Nikola"]

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio"] }

# HTTP client for Ollama API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "sync"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
directories = "5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
